K1J-551: Added v2 for customer portal API